# WebCamCvQt

./: CMakeLists.txt  QtOpenCVTutorial.pro  RGBCamera.cpp  RGBCamera.h  qcvwidget.cpp  qcvwidget.h  qcvwidget.ui
